# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml
gendiff/: __init__.py  cli.py  constants.py  core.py  diff_generator.py  file_parser.py  format_picker.py  gardener.py  gardener_tools.py  node_explorer.py  script.py  tree_builder.py  view.py
gendiff/format/: __init__.py  diff2json.py  diff2plain.py  diff2stylish.py  diff_explorer.py  stylish.py
gendiff/formatters/: __init__.py  as_plain.py  as_stylish.py  diff_explorer.py  format_picker.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  tests.py
tests/fixtures/output/json/: plain_result.json  recursive_result.json
tests/fixtures/outputs/json/: plain_answer.json  rec_answer.json
